# opennorm

./: Cargo.toml  HOHFELDIAN_SYNTAX_REFERENCE.md  OpenNorm_Documentation (2).md  README.md  build_run.sh  mit.lean  mit.strict.lean  opennormcheck.md
documents/articles/: CGI.Art.156.charges-deductibles.md  CGI.Art.156.deficits-agricoles.md  CGI.Art.156.deficits-bic.md  CGI.Art.156.deficits-bnc.md  CGI.Art.156.deficits-capitaux.md  CGI.Art.156.deficits-fonciers.md  CGI.Art.156.md  CGI.Art.156.opennorm.md
documents/constitution/: DDHC.1789.md
documents/design/: ADVANCED_SMT_VALIDATION.md  CURRENCY_SUPPORT_ENHANCEMENT.md  DIMENSIONAL_ANALYSIS.md  EXCEPTION_CONSTRUCTOR_IMPLEMENTATION.md  NORMS_VS_PROCEDURES.md  OPERATIONAL_LAYER_DESIGN.md  OPERATIONAL_LAYER_SPEC.md  PROCEDURE_VALIDATION_INTEGRATION.md  newOPERATIONAL_LAYER.md
documents/licences/: mit.strict copy.md
documents/tests/: code_general_impots.md  french_tax_code.md  test_contradiction.md  test_subsumption.md
lean/: deonic.lean
licences/: mit.fuzzy.md  mit.md  mit.senarios.md  mit.strict.md
src/: ast.rs  checker.rs  code_gen.jl  error.rs  main.rs  opennorm.jl  opennorm.pest  parser.rs  parser_md.rs  report.rs  stdlib.rs  transpiler.rs  unit_system.jl  yaml_gen.jl
src/codegen/: codegen.jl  core.jl  procedures.jl  smt.jl  utils.jl
src/julia/: SMT_solver.jl  code_gen.jl  currency_codegen.jl  exceptions.jl  generated_currency_units.jl  opennorm.jl  parser.jl  structures.jl  type_checker.jl  unit_system.jl  yaml_gen.jl
src/parser/: condition_parser.jl  parser.jl  (+4 more)
test/: README.md  aqua.jl  runtests.jl
(+65 files in other folders)
